@@ -341,7 +341,8 @@ runAbsoluteCN <- function(normal.coverage.file = NULL,
         if (!is.null(seg.file)) {
             if (is.null(normal.coverage.file)) 
                 normal <- tumor
-            log.ratio <- .createFakeLogRatios(tumor, seg.file, chr.hash)
+            log.ratio <- .createFakeLogRatios(tumor, seg.file, sampleid, 
+                                              chr.hash)
             smooth.log.ratio <- FALSE
             if (is.null(sampleid)) 
                 sampleid <- read.delim(seg.file, as.is=TRUE)[1, 1]
@@ -503,7 +504,7 @@ runAbsoluteCN <- function(normal.coverage.file = NULL,
     flog.info("Segmenting data...")
     
     args.segmentation <- c(list(normal = normal, tumor = tumor, log.ratio = log.ratio, 
-        seg = .loadSegFile(seg.file), plot.cnv = plot.cnv, min.coverage = ifelse(is.null(seg.file), 
+        seg = .loadSegFile(seg.file, sampleid), plot.cnv = plot.cnv, min.coverage = ifelse(is.null(seg.file), 
             min.coverage, -1), sampleid = sampleid, vcf = vcf.germline, tumor.id.in.vcf = tumor.id.in.vcf, 
         normal.id.in.vcf = normal.id.in.vcf, max.segments = max.segments, chr.hash = chr.hash, 
         centromeres = centromeres), args.segmentation)
