@@ -314,7 +314,8 @@ curation, especially when matching normal samples are not available.
 We recommend running \software{MuTect} with a pool of normal samples to filter
 common sequencing errors and alignment artifacts from the VCF.
 \software{MuTect} requires a single VCF containing all normal samples, for
-example generated by the \software{GATK CombineVariants} tool. 
+example generated by the \software{GATK CombineVariants} tool (see
+Section~\ref{faqinput}). 
 
 It is highly recommended to provide \Biocpkg{PureCN} this combined VCF as well;
 it might help the software correcting non-reference read mapping biases. This
@@ -808,7 +809,9 @@ access to the raw log-ratio distribution\footnote{If the third-party tool
 provides target-level log-ratios, then these can be provided via the
 \Rcode{log.ratio} argument in addition to \Rcode{seg.file} though. See also
 Section~\ref{customnorm}.}. The expected file format for already segmented copy
-number data is:
+number data is\footnote{This segmentation file can contain multiple samples, in
+which case the provided \Rcode{sampleid} must match a sample in the column
+\Rcode{ID}}:
 
 \begin{verbatim}
     ID  chrom   loc.start   loc.end num.mark    seg.mean
